[gd_scene load_steps=19 format=3 uid="uid://bhyh2l84m7ihr"]

[ext_resource type="Script" path="res://Planet/planet.gd" id="1_jmkuo"]
[ext_resource type="Texture2D" uid="uid://c6rxqn2euirtf" path="res://Planet/meteor_detailedLarge.png" id="1_wuty0"]
[ext_resource type="Script" path="res://Planet/PlanetSprite.gd" id="2_3766x"]
[ext_resource type="Script" path="res://Planet/CoordinatesLineEdit.gd" id="4_fcnc4"]
[ext_resource type="Script" path="res://Station/PortHighlighter.gd" id="4_xdakr"]
[ext_resource type="Texture2D" uid="uid://cvpcgwvaq685m" path="res://Planet/meteor_detailedLarge_normal.png" id="4_xub7b"]
[ext_resource type="Script" path="res://Scripts/port_component.gd" id="5_w2vvg"]
[ext_resource type="Theme" uid="uid://bm5adft0k7xfb" path="res://GUI/prueba.tres" id="6_0uh1c"]
[ext_resource type="Texture2D" uid="uid://dseb3a4ogemns" path="res://GUI/Vector/Green/Icon_Check.png" id="6_q8mnm"]
[ext_resource type="Script" path="res://Planet/SendShipFeedback.gd" id="7_3rues"]
[ext_resource type="Texture2D" uid="uid://cc8jfo2yxuhmf" path="res://Pruebas/512x512 textures (82).png" id="10_qqlhi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6oaoi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yrehl"]

[sub_resource type="CanvasTexture" id="CanvasTexture_clrv0"]
diffuse_texture = ExtResource("1_wuty0")
normal_texture = ExtResource("4_xub7b")

[sub_resource type="Animation" id="Animation_835ba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.106, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2uh00"]
resource_name = "SendFailure"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.233258, 1),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.35, 0.35), Vector2(0.26, 0.26), Vector2(0.4, 0.4), Vector2(0.26, 0.26), Vector2(0.25, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.846782, 0, 0.1208, 1), Color(0.847059, 0, 0.121569, 1)]
}

[sub_resource type="Animation" id="Animation_4v737"]
resource_name = "SendSuccess"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.5, 0.6, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 0.176777, 0.101532),
"update": 0,
"values": [Vector2(0.15, 0.15), Vector2(0.26, 0.26), Vector2(0.45, 0.65), Vector2(0.66, 0.5), Vector2(0.55, 0.55), Vector2(0.4, 0.4), Vector2(0.3, 0.3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.425173, 0.77152, 0.285643, 1), Color(0.423529, 0.772549, 0.286275, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rltj8"]
_data = {
"RESET": SubResource("Animation_835ba"),
"SendFailure": SubResource("Animation_2uh00"),
"SendSuccess": SubResource("Animation_4v737")
}

[node name="Planet" type="Node2D"]
material = SubResource("CanvasItemMaterial_6oaoi")
script = ExtResource("1_jmkuo")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(0.261911, 0.261911)
energy = 0.65
texture = ExtResource("10_qqlhi")
texture_scale = 1.52

[node name="PlanetSprite" type="Sprite2D" parent="."]
self_modulate = Color(0.683078, 0.683077, 0.683077, 1)
light_mask = 5
material = SubResource("CanvasItemMaterial_yrehl")
texture = SubResource("CanvasTexture_clrv0")
script = ExtResource("2_3766x")

[node name="PortHighlighter" type="Node" parent="PlanetSprite" node_paths=PackedStringArray("portSprite", "_portComponent")]
script = ExtResource("4_xdakr")
portSprite = NodePath("..")
highlightColor = Color(0.756863, 0.964706, 0.772549, 1)
selfModulate = true
_portComponent = NodePath("../../PortComponent")

[node name="PortComponent" type="Node" parent="."]
script = ExtResource("5_w2vvg")

[node name="LineEdit" type="LineEdit" parent="."]
light_mask = 0
offset_left = 28.0
offset_top = -52.0
offset_right = 104.0
offset_bottom = -6.0
scale = Vector2(0.825879, 0.825879)
theme = ExtResource("6_0uh1c")
theme_type_variation = &"InLevelTextField"
placeholder_text = "A?"
alignment = 1
max_length = 2
expand_to_text_length = true
script = ExtResource("4_fcnc4")

[node name="SendShipFeedback" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
light_mask = 0
position = Vector2(-44, -37)
scale = Vector2(1.106, 1)
texture = ExtResource("6_q8mnm")
script = ExtResource("7_3rues")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SendShipFeedback"]
libraries = {
"": SubResource("AnimationLibrary_rltj8")
}

[connection signal="ship_arrived" from="PortComponent" to="." method="_on_port_component_ship_arrived"]
[connection signal="animation_finished" from="SendShipFeedback/AnimationPlayer" to="SendShipFeedback" method="_on_animation_player_animation_finished"]
